...
    public static let dismiss = { NSLocalizedString("Dismiss", comment: c5) }()
    public static let accept = { NSLocalizedString("Accept", comment: c6) }()
    public static let cont = { NSLocalizedString("Continue", comment: c6) }()
    public static let decline = { NSLocalizedString("Decline", comment: c6) }()
    public static let yes = { NSLocalizedString("Yes", comment: c6) }()
    public static let no = { NSLocalizedString("No", comment: c6) }()
    public static let edit = { NSLocalizedString("Edit", comment: c7) }()
    public static let reset = { NSLocalizedString("Reset", comment: c7) }()
}

