...
                                                                    <font key="NSFont" metaFont="menu" size="11"/>
                                                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                                </attributes>
                                                            </fragment>
                                                        </attributedString>
                                                    </label>
                                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="244" restorationIdentifier="deliveryMethodButton" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" adjustsImageWhenHighlighted="NO" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8nT-zg-jpv" customCla
                                                        <rect key="frame" x="141" y="0.0" width="188" height="50"/>
                                                        <state key="normal">
                                                            <color key="titleColor" name="Text"/>
                                                            <color key="titleShadowColor" red="1" green="0.89652202889999999" blue="0.44217208829999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
...
                                        <rect key="frame" x="0.0" y="44.5" width="343" height="43.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YaI-Qz-V3T" id="9qY-fn-d1c">
                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJb-uW-EGL">
                                                    <rect key="frame" x="16" y="11" width="32" height="21.5"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="32" id="eiS-mt-O6S"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                            <outlet property="orderLabel" destination="tJb-uW-EGL" id="ifd-Sz-lo0"/>
                                            <outlet property="siteIndexImageView" destination="BhY-Z1-713" id="nhp-E8-okw"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="sitesTableView"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="QTr-h5-QBW"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
...
