...
            barButtonSystemItem: UIBarButtonItem.SystemItem.add,
            target: sitesViewController,
            action: insert
        )
        item.tintColor = PDColors[.NewItem]
        item.title = nil
        item.accessibilityIdentifier = "insertNewSiteButton"
        return item
    }

    static func createEditItem(edit: Selector, sitesViewController: UIViewController) -> UIBarButtonItem {
        let item = PDViewFactory.createTextBarButtonItem(ActionStrings.Edit)
        item.target = sitesViewController
...
